added jasper report list

--- a/src/app/pages/advisories/advisories.page.html
+++ b/src/app/pages/advisories/advisories.page.html
@@ -5,5 +5,14 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid >
+      <ion-row>
+          <!--Timeline Twitter -->
+          <a id="twitter" class="twitter-timeline"
+             data-tweet-limit="10"
+             data-chrome="noscrollbar nofooter"
+             href="https://twitter.com/aguilarufino">aguilarufino</a>
+             <!-- <a href="https://twitter.com/intent/tweet?button_hashtag=CovidSaBukid&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #CovidSaBukid</a> -->
+      </ion-row>
+  </ion-grid>
 </ion-content>
