--- a/src/app/pages/advisories/advisories.page.html
+++ b/src/app/pages/advisories/advisories.page.html
@@ -5,14 +5,6 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid >
-      <ion-row>
-          <!--Timeline Twitter -->
-          <a id="twitter" class="twitter-timeline"
-             data-tweet-limit="10"
-             data-chrome="noscrollbar nofooter"
-             href="https://twitter.com/aguilarufino">aguilarufino</a>
-             <!-- <a href="https://twitter.com/intent/tweet?button_hashtag=CovidSaBukid&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #CovidSaBukid</a> -->
-      </ion-row>
-  </ion-grid>
+<iframe *ngIf="isbrowser" class="resp-iframe" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Flgubukidnon%2F&tabs=timeline&width=1024&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=562129067844961" width="1024" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+<iframe *ngIf="!isbrowser" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Flgubukidnon%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=562129067844961" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 </ion-content>
